# oatie-ai-reporting

./: .env  .env.development  .env.example  .env.production  .env.template  .eslintrc.cjs  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc.json  AI_TEMPLATE_INTELLIGENCE_IMPLEMENTATION.md  CHANGELOG.md  CLOUD_DEPLOYMENT_GUIDE.md  CODESPACES_DEPLOYMENT_GUIDE.md  CODESPACE_CONVERSATION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_INSTRUCTIONS.md  DEVELOPMENT_SETUP_COMPLETE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  ORACLE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TESTING.md  PR36_CLEANUP_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_STATUS_REPORT.md  README.md  SECURITY.md  analytics-demo.html  analytics_api.py  backend_test.py  backend_test_report.json  deploy_production.py  deployment_summary.py  dev_server.py  docker-compose.dev.yml  (+33 more)
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  init-db.sql  postgres-dev.conf  prometheus-dev.yml  setup.sh  start-services.sh  validate-setup.sh
.devcontainer/oracle-mock/: index.html  mock-api.json  nginx.conf
.devcontainer/scripts/: health-check.sh  monitor-services.sh  restart-services.sh  view-logs.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  code-quality.yml  database-migration.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  docs.yml  performance-test.yml  pre-commit.yml  release.yml  security-scan.yml  security.yml
backend/: .env.development  .env.example  .env.production  .pylintrc  Dockerfile  README.md  alembic.ini  main.py  main_demo.py  oatie.db  oracle_integration.py  phase1_completion_test.py  phase2_completion_test.py  pyproject.toml  requirements.txt  setup.cfg  sql_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_table_metadata.py
backend/api/: graphql.py  health.py  performance.py
backend/api/v1/: __init__.py
backend/api/v1/endpoints/: admin.py  analytics.py  auth.py  mfa.py  oracle.py  queries.py  reports.py  roles.py  security.py  sql.py  users.py
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: ai.py  health.py  reports.py
backend/app/api/routes/: health.py  metrics.py  sql.py
backend/app/core/: config.py  database.py  logging_config.py
backend/app/db/: __init__.py  database.py
backend/app/models/: metadata_objects.py  models.py
backend/app/schemas/: ai.py  report.py
backend/app/services/: schema_validator.py  sql_agent.py
backend/core/: abac.py  cache.py  cache_simple.py  config.py  database.py  environment.py  error_recovery.py  mfa.py  monitoring.py  oracle_bi_publisher.py  performance.py  rbac.py  security.py  template_intelligence.py  webhooks.py
backend/integrations/: __init__.py
backend/integrations/oracle/: __init__.py  auth.py  connection_pool.py  models.py  sdk.py
backend/oatie/: __init__.py
backend/oatie/core/: config.py
backend/oatie_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/services/: __init__.py  nlp_sql_service.py
backend/tests/: test_api_endpoints.py  test_enhanced_sql_agent.py  test_main.py  test_schema_validator.py  test_security.py  test_sql_agent.py
dashboards/: performance-dashboard.json
docker/nginx/: default.conf  nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: AI_AGENT_ENHANCEMENT_TASKS.md  AUTOMATED_AGENT_PLAN.md  CODESPACES_DEPLOYMENT.md  DEVOPS_PIPELINE.md  ENTERPRISE_DEPLOYMENT.md  IMMEDIATE_ACTION_PLAN.md  NLP_SQL_ENGINE.md  ORACLE_INTEGRATION.md  PHASE_4_DEVELOPMENT_PLAN.md  PHASE_4_STATUS_REPORT.md  README.md  SECURITY.md  architecture.md  deployment.md  immediate-action-log.md  oracle-redwood-automation-workflow.md  product-roadmap.md
docs/architecture/: api-documentation.md  database-schema.md  system-overview.md
docs/getting-started/: quick-start.md
docs/processes/: agent-coordination.md  branch-strategy.md  code-review.md  release-process.md
docs/troubleshooting/: troubleshooting-guide.md
frontend/: .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package-simple.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.simple.ts  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App-simple.tsx  App.css  App.test.tsx  App.tsx  index.css  index.tsx  main.tsx  reportWebVitals.ts
frontend/src/components/: Dashboard.tsx  DashboardBuilder.tsx  Header.tsx  Layout.tsx  (+7 more)
helm/oatie/: Chart.yaml  values.yaml
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  nginx-cdn.conf  nginx.conf
infrastructure/kubernetes/: backend-deployment.yaml
monitoring/: alert_rules.yml  prometheus.yml
scripts/: analyze_performance.py  business_metrics.py  dev_watch.ps1  github-api-demo.ts  github-app-setup.md  monitor_agents.py  optimization-summary.md  optimized-github-client.ts  package-lock.json  package.json  performance_regression_check.py  performance_test.py  rate-limit-manager.ts  tsconfig.json  watchdog.py
scripts/deployment/: blue-green-deploy.sh  deploy_production.py  disaster-recovery.sh  start_production.sh
src/: App.test.tsx  App.tsx  health.test.ts  index.css
src/components/: Dashboard.tsx  LoginForm.tsx  NLPSQLInterface.tsx  OracleConnectionDialog.tsx
src/theme/: oracleRedwoodTheme.ts
src/utils/: parallelProcessor.test.ts  parallelProcessor.ts
tests/: conftest.py  test_config.py  test_deployment.py
tests/accessibility/: accessibility.spec.ts
tests/api/: postman-collection.json
tests/e2e/: global-setup.ts  global-teardown.ts  performance.spec.ts
tests/oracle/: __init__.py  test_integration.py  test_minimal.py  test_simple.py
tests/performance/: artillery-config.yml  database_stress_test.py  jmeter-load-test.jmx  k6-load-test.js
tests/security/: security.spec.ts
(+46 files in other folders)
